homepage sections are done

--- a/homepage.html
+++ b/homepage.html
@@ -55,42 +55,35 @@
         <img id="first-edition-logo"
             src="/assets/firstedition.png"
             title="First Edition">
+        First Edition
         <br>
         <img id="global-logo"
         src="/assets/global.png"
         title="Global Chat">
+        Global Chat <style> </style>
         <br>
         <img class="messages-logo"
             src="/assets/message-logo.png"
             title="Direct Messages">
+            Messages
         <div>
             <img class="publish-logo"
             src="/assets/publish.png"
             title="Publish">
+            Publish
         </div>
 
     </div>
     <div class="articles">
-        <div id="card-container"></div>
-        <div id="loader">
-            <div class="skeleton-card"></div>
-            <div class="skeleton-card"></div>
-            <div class="skeleton-card"></div>
-        </div>
-        <div class="card-actions">
-            <span>showing
-                <span id="card-count"></span> of
-                <span id="card-total"></span> cards
-            </span>
-        </div>
+        
     </div>
     <div class="right-section">
-        <div id="search-pubkey">
+        <div>
             <img id="search-logo"
             src="/assets/search-logo.png">
         </div>
-        <div>
-            <input type="text" autocomplete="off" id="search-pubkey" placeholder="enter public key to search">
+        <div id="input-pubkey">
+            <input type="text" autocomplete="off" placeholder="enter public key to search">
         </div>
     </div>
 </body>
