--- a/homepage.html
+++ b/homepage.html
@@ -12,34 +12,38 @@
 </head>
 <body>
     <script>
-
-        var relay = localStorage.getItem("relay");
-        var socket = new WebSocket(relay);
+        var relay = 'wss://relay.cryptocculture.com'
+        var socket = new WebSocket( relay );
         var pubKey = localStorage.getItem("pubKey");
         var privKey = localStorage.getItem("privkey");
-        var relayCculture = new WebSocket('wss://relay.cryptocculture.com');;
+        var { getSharedSecret, schnorr, utils } = nobleSecp256k1;
+        var crypto  = window.crypto ;
+        var getRand = size => crypto.getRandomValues(new Uint8Array(size));
+        var sha256  = bitcoinjs.crypto.sha256;
+        var keypair = bitcoinjs.ECPair.makeRandom();
 
-        var subId   = bitcoinjs.ECPair.makeRandom().privateKey.toString( "hex" )
-        var filterMe  = { "authors": [ pubKey ] }
+        var subId = bitcoinjs.ECPair.makeRandom().privateKey.toString( "hex" );
+        var filterMe = { "authors": [ pubKey ] }
 
         function connectedSubbed() {
-            relayCculture.addEventListener('open', async function( e ) {
+            socket.addEventListener('open', async function( e ) {
                 console.log( "connected to " + relay )
             
                 var subscription = [ "REQ", subId, filterMe ]
-                console.log('Subscription:', subscription)
 
-                relayCculture.send(JSON.stringify( subscription ));
+                socket.send(JSON.stringify( subscription ));
+                console.log('Subscription:', subscription)
             })
         }
 
-	    function hexToBytes( hex ) {
+        function hexToBytes( hex ) {
 	        return Uint8Array.from( hex.match( /.{1,2}/g ).map( ( byte ) => parseInt( byte, 16 ) ) );
 	    }
 
 	    function bytesToHex( bytes ) {
 	        return bytes.reduce( ( str, byte ) => str + byte.toString( 16 ).padStart( 2, '0' ), '' );
 	    }
+
 	    function base64ToHex( str ) {
 	        var raw = atob( str );
 	        var result = '';
@@ -49,6 +53,7 @@
 	        }
 	        return result;
 	    }
+
         function encrypt( privkey, pubkey, text ) {
             var key = nobleSecp256k1.getSharedSecret( privkey, '02' + pubkey, true ).substring( 2 );
             var iv = window.crypto.getRandomValues(new Uint8Array(16));
@@ -59,6 +64,7 @@
             var decoder = new TextDecoder();
             return emsg + "?iv=" + btoa( String.fromCharCode.apply( null, uint8View ) );
         }
+
         function decrypt( privkey, pubkey, ciphertext ) {
             var [ emsg, iv ] = ciphertext.split( "?iv=" );
             var key = nobleSecp256k1.getSharedSecret( privkey, '02' + pubkey, true ).substring( 2 );
@@ -73,7 +79,7 @@
         }
 
         function message() {
-            relayCculture.addEventListener('message', async function( message ) {
+            socket.addEventListener('message', async function( message ) {
                 var [ type, subId, event ] = JSON.parse( message.data );
                 var { kind, content } = event || {}
                 if (!event) return
@@ -128,29 +134,14 @@
                 Publish
             </button>
             <script>
-                async function getSignedEvent1(event1, privKey) {
-                    var eventData = JSON.stringify([
-                        0,                    // Reserved for future use
-                        event1['pubkey'],        // The sender's public key
-                        event1['created_at'],    // Unix timestamp
-                        event1['kind'],        // Message “kind” or type
-                        event1['tags'],        // Tags identify replies/recipients
-                        event1['content']        // Your note contents
-                    ])
-                    event1.id  = sha256( eventData ).toString( 'hex' )
-                    event1.sig = await schnorr.sign( event1.id, privKey ) 
-                    return event1
-                }
-
                 function publish () {
+
                     var publishTextArea = document.getElementById('publish-textarea');
                     var contentPublish = publishTextArea.value;
+                    var eventId = bitcoinjs.ECPair.makeRandom().privateKey.toString( "hex" );
+                    console.log(contentPublish);
 
-                    console.log(contentPublish)
-
-                    socket.addEventListener('publish', async function( eventtype1 ) {
-
-                        var event1 = {
+                    var event = {
                             "content"    : contentPublish,
                             "created_at" : Math.floor( Date.now() / 1000 ),
                             "kind"       : 1,
@@ -158,10 +149,25 @@
                             "pubkey"     : pubKey,
                         };
 
-                        var signedEvent1 = await getSignedEvent1(event1, privKey);
-		                console.log('signedEvent:', signedEvent1);
-		                socket.send(JSON.stringify([ "EVENT", signedEvent1 ]));
+                    socket.addEventListener('publish', async function( e ) {
+                        var signedEvent = await getSignedEvent(event, privKey);
+		                console.log('signedEvent:', signedEvent);
+		                socket.send(JSON.stringify([ "EVENT", signedEvent ]));
                     })
+                }
+
+                async function getSignedEvent(event, privKey) {
+                    var eventData = JSON.stringify([
+                        0,                    // Reserved for future use
+                        event['pubKey'],        // The sender's public key
+                        event['created_at'],    // Unix timestamp
+                        event['kind'],        // Message “kind” or type
+                        event['tags'],        // Tags identify replies/recipients
+                        event['content']        // Your note contents
+                    ])
+                    event.id  = sha256( eventData ).toString( 'hex' )
+                    event.sig = await schnorr.sign( event.id, privKey ) 
+                    return event
                 }
             </script>
         </div>
