--- a/homepage.html
+++ b/homepage.html
@@ -7,6 +7,9 @@
     <script src="https://bitcoincore.tech/apps/bitcoinjs-ui/lib/bitcoinjs-lib.js"></script>
     <script src="https://bundle.run/noble-secp256k1@1.2.14"></script>
     <script src="https://bundle.run/browserify-cipher@1.0.1"></script>
+    <script src="https://bundle.run/bip39@3.0.4"></script>
+    <script src="https://bundle.run/bip32@2.0.6"></script>
+    <script src="https://bundle.run/buffer@6.0.3"></script>
     <title>MeShell</title>
     <link href="styles.css" rel="stylesheet"></link>
 </head>
@@ -15,24 +18,32 @@
         var relay = 'wss://relay.cryptocculture.com'
         var socket = new WebSocket( relay );
         var pubKey = localStorage.getItem("pubKey");
-        var privKey = localStorage.getItem("privkey");
+        var privKey = localStorage.getItem("privKey");
         var { getSharedSecret, schnorr, utils } = nobleSecp256k1;
         var crypto  = window.crypto ;
         var getRand = size => crypto.getRandomValues(new Uint8Array(size));
         var sha256  = bitcoinjs.crypto.sha256;
         var keypair = bitcoinjs.ECPair.makeRandom();
 
-        var subId = bitcoinjs.ECPair.makeRandom().privateKey.toString( "hex" );
-        var filterMe = { "authors": [ pubKey ] }
-
         function connectedSubbed() {
-            socket.addEventListener('open', async function( e ) {
+            socket.addEventListener('open', function( event ) {
                 console.log( "connected to " + relay )
-            
-                var subscription = [ "REQ", subId, filterMe ]
+                console.log("Your Public Key: " + pubKey);
+                console.log("Your Private Key: " + privKey);
+                
+                var subId = bitcoinjs.ECPair.makeRandom().privateKey.toString( "hex" );
+                var filterMe = { "authors": [ pubKey ] };
+                var subscriptionMe = [ "REQ", subId, filterMe ];
 
-                socket.send(JSON.stringify( subscription ));
-                console.log('Subscription:', subscription)
+                subscriptionMe = JSON.stringify( subscriptionMe );
+                sessionStorage.subscriptionMe = subscriptionMe;
+                socket.send( sessionStorage.subscriptionMe );
+                console.log(subscriptionMe);
+
+                const sendNote = document.getElementById('makeNoteButton');
+                sendNote.innerHTML = `<button id="publish-text-button" onclick="makeNote(document.getElementById('publish-textarea').value)">Publish</button>`;
+
+
             })
         }
 
@@ -130,44 +141,57 @@
                     placeholder="Say something to the world"></textarea>
             <br>
             <div id="padding-button"></div>
-            <button id="publish-text-button" onclick="publish()">
+            <div id="makeNoteButton">
+            <button id="publish-text-button" onclick="makeNote(document.getElementById('publish-textarea').value)">
                 Publish
             </button>
+            </div>
             <script>
-                function publish () {
-
-                    var publishTextArea = document.getElementById('publish-textarea');
-                    var contentPublish = publishTextArea.value;
-                    var eventId = bitcoinjs.ECPair.makeRandom().privateKey.toString( "hex" );
-                    console.log(contentPublish);
-
-                    var event = {
-                            "content"    : contentPublish,
-                            "created_at" : Math.floor( Date.now() / 1000 ),
-                            "kind"       : 1,
-                            "tags"       : [],
-                            "pubkey"     : pubKey,
-                        };
-
-                    socket.addEventListener('publish', async function( e ) {
-                        var signedEvent = await getSignedEvent(event, privKey);
-		                console.log('signedEvent:', signedEvent);
-		                socket.send(JSON.stringify([ "EVENT", signedEvent ]));
-                    })
-                }
-
-                async function getSignedEvent(event, privKey) {
-                    var eventData = JSON.stringify([
-                        0,                    // Reserved for future use
-                        event['pubKey'],        // The sender's public key
-                        event['created_at'],    // Unix timestamp
-                        event['kind'],        // Message “kind” or type
-                        event['tags'],        // Tags identify replies/recipients
-                        event['content']        // Your note contents
-                    ])
-                    event.id  = sha256( eventData ).toString( 'hex' )
-                    event.sig = await schnorr.sign( event.id, privKey ) 
-                    return event
+                function makeNote( note ) {
+                    console.log( "note: '" + note + "'" );
+                    var now = Math.floor( ( new Date().getTime() ) / 1000 );
+                    console.log( now );
+                    var newevent = [
+                            0,
+                            pubKey,
+                            now,
+                            1,
+                            [],
+                            note
+                    ];
+                    var message = JSON.stringify( newevent );
+                    console.log( "message: '" + message + "'" );
+                    var msghash = bitcoinjs.crypto.sha256( message ).toString( 'hex' );
+                    console.log( "msghash: '" + msghash + "'" );
+                    nobleSecp256k1.schnorr.sign( msghash, privKey ).then( 
+                            value => { 
+                                    sig = value;
+                                    console.log( "the sig is:", sig );
+                                    nobleSecp256k1.schnorr.verify( 
+                                            sig,
+                                            msghash,
+                                            pubKey
+                                    ).then(
+                                            value => { 
+                                                    console.log( "is the signature valid for the above pubkey over the message 'test'?", value );
+                                                    if ( value ) {
+                                                            var fullevent = {
+                                                                    "id": msghash,
+                                                                    "pubkey": pubKey,
+                                                                    "created_at": now,
+                                                                    "kind": 1,
+                                                                    "tags": [],
+                                                                    "content": note,
+                                                                    "sig": sig
+                                                            }
+                                                            var sendable = [ "EVENT", fullevent ];
+                                                            sessionStorage.sendable = JSON.stringify( sendable );
+                                                            socket.send( '["EVENT",' + JSON.stringify( JSON.parse( sessionStorage.sendable )[ 1 ] ) + ']' );
+                                                    }
+                                            }
+                                );
+                            }
+                    );
                 }
             </script>
         </div>
