settings section added for urser metadata

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <img id="LoginLogo" src="/assets/MeShell_Logo_200_blank.png" alt="MeShell Logo" title="Michel" width="25%">
         <div class="Inputs">
             <input type="text" autocomplete="off" id="pubKeyGen" placeholder="Public Key" size="62">
-            <br><input type="text" autocomplete="off" id="privKeyGen" placeholder="Private Key" size="62">
+            <br><input type="text" autocomplete="off" id="privKeyGen" placeholder="If you have a Nostr account enter your private key" size="62">
         </div>
         <br>
         <div id="ParentLoginButton">
