set_metadata is sending the infos to the relay now

--- a/Login.html
+++ b/Login.html
@@ -72,6 +72,9 @@
                 localStorage.setItem("pubKey", pubKey);
                 localStorage.setItem("pubKeyMinus2", pubKeyMinus2);
                 localStorage.setItem("privKey", privKey);
+                //localStorage.setItem("NickName", null);
+                //localStorage.setItem("UserAbout", null);
+                //localStorage.setItem("UserPPicture", null);
             }
         </script>
     </body>
